--- a/Development/TomPIT.Development.UI/Views/Shared/Header.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Shared/Header.cshtml
@@ -1,9 +1,10 @@
 ﻿@model TomPIT.Models.ShellModel
 
-<environment names="Staging,Production">
-	<link rel="stylesheet" type="text/css" href="~/Assets/styles.min.css" />
-	<script src="~/Assets/scripts.min.js"></script>
-</environment>
+    <environment names="Staging,Production">
+        <link rel="stylesheet" type="text/css" href="~/Assets/styles.min.css" />
+        <script src="~/Assets/scripts.min.js"></script>
+        <script src="~/Assets/reporting.design.min.js"></script>
+    </environment>
 <environment names="Development">
     <link rel="stylesheet" type="text/css" href="~/Assets/Fonts/OpenSans/opensans.css" />
     <link rel="stylesheet" type="text/css" href="~/Assets/Styles/bootstrap/bootstrap.css" />
