--- a/App/TomPIT.App.UI/Views/Shared/ContentInit.cshtml
+++ b/App/TomPIT.App.UI/Views/Shared/ContentInit.cshtml
@@ -1,4 +1,6 @@
 ﻿@using TomPIT.ComponentModel;
+@using TomPIT.IoC;
+@using TomPIT.ComponentModel.IoC;
 
 @model TomPIT.Middleware.IMiddlewareContext
 
@@ -11,10 +13,16 @@
 
    var uiModel = Model as IViewModel;
    var view = string.Empty;
+   var injections = 0;
 
    if(uiModel != null)
    {
        view = $"{uiModel.MicroService.Name}/{uiModel.ViewConfiguration.ComponentName()}";
+        var layout = uiModel.ViewConfiguration.Layout;
+        var masterDependencies = uiModel.Tenant.GetService<IUIDependencyInjectionService>().QueryMasterDependencies(layout, uiModel.Arguments, MasterDependencyKind.Client);
+        var viewDependencies = uiModel.Tenant.GetService<IUIDependencyInjectionService>().QueryViewDependencies(view, uiModel.Arguments);
+
+        injections = Convert.ToInt32(masterDependencies?.Count) + Convert.ToInt32(viewDependencies?.Count);
    }
 }
 
@@ -22,7 +30,8 @@
     tompit.DEFAULTS = {
         appUrl: '@rootUrl',
         component: '@component',
-        view: '@view'
+        view: '@view',
+        injections: @injections
     };
 
     tompit.GLOBALIZE = {
