--- a/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
@@ -27,7 +27,7 @@
                     <span class="pt-2 small collapse" title="Editor syntax" id="labelSyntaxLanguage"></span>
                 </div>
             </div>
-            <div id="devTextDesignerEditor" class="text-editor text-editor-sa"></div>
+            <div data-role="text-editor" class="text-editor text-editor-sa"></div>
         </div>
 		<div id="devDesigner" class="collapse show">
 			@await Html.PartialAsync("~/Views/Ide/Designers/Empty.cshtml", Model)
