--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/versionControl.css
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/versionControl.css
@@ -2,6 +2,9 @@
 [name="designer"] {
   display: none;
 }
+#versionControl [name="explorer"] {
+  font-size: 0.8rem;
+}
 [name="diff"].tp-active,
 [name="designer"].tp-active {
   display: block;
@@ -16,4 +19,28 @@
 }
 .tp-change-item.tp-active {
   font-weight: bold;
+}
+ul.tp-vc-list {
+  padding-left: 17px;
+  list-style: none;
+}
+ul.tp-vc-list li {
+  padding: 2px 0;
+  white-space: nowrap;
+}
+.tp-vc-item-text:hover {
+  color: #2196f3;
+}
+ul.tp-vc-list.tp-top-level {
+  padding-left: 0px;
+}
+ul.tp-vc-list.tp-hidden {
+  display: none;
+}
+[name="designerToolbar"] .btn-group a.btn-link.active {
+  font-weight: 700;
+}
+.tp-vc-explorer-toolbar {
+  border-bottom: 1px solid #e0e0e0;
+  padding: 5px;
 }
