--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/versionControl.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/versionControl.less
@@ -1,8 +1,13 @@
-﻿[name="diff"],
+﻿@import "Variables.less";
+
+[name="diff"],
 [name="designer"] {
     display: none;
 }
 
+#versionControl [name="explorer"]{
+    font-size:0.8rem;
+}
 [name="diff"].tp-active,
 [name="designer"].tp-active {
     display: block;
@@ -20,4 +25,34 @@
 
 .tp-change-item.tp-active {
     font-weight:bold;
+}
+
+ul.tp-vc-list {
+    padding-left: 17px;
+    list-style: none;
+}
+
+ul.tp-vc-list li{
+    padding:2px 0;
+    white-space:nowrap;
+}
+
+.tp-vc-item-text:hover {
+    color:@Blue500;
+}
+
+ul.tp-vc-list.tp-top-level {
+    padding-left: 0px;
+}
+ul.tp-vc-list.tp-hidden {
+    display: none;
+}
+
+[name="designerToolbar"] .btn-group a.btn-link.active{
+    font-weight:700;
+}
+
+.tp-vc-explorer-toolbar{
+    border-bottom:1px solid @Grey300;
+    padding:5px;
 }
