--- a/Development/TomPIT.Development.UI/Views/VersionControl/VersionControl.cshtml
+++ b/Development/TomPIT.Development.UI/Views/VersionControl/VersionControl.cshtml
@@ -23,6 +23,7 @@
                 <div class="btn-group btn-group-sm" role="group">
                     <a href="#" data-command="view-changes" class="btn btn-small btn-link active" role="button">Changes</a>
                     <a href="#" data-command="view-push" class="btn btn-small btn-link" role="button">Push</a>
+                    <a href="#" data-command="view-bindings" class="btn btn-small btn-link" role="button">Bindings</a>
                 </div>
             </div>
         </div>
