Entity Synchronization behavior changed

--- a/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
@@ -19,10 +19,12 @@
 		<div data-tp-tag="progress-container"></div>
         <div id="devTextDesigner" class="collapse">
             <div class="template-toolbar btn-toolbar justify-content-between">
-                <div class="btn-group">
-                    <a id="btnDebug" href="#" target="_blank" class="btn btn-sm btn-light collapse" title="Download source code for debugging"><i class="fal fa-bug"></i></a>
-
-                </div>
+				<div class="btn-group">
+					<a id="btnDebug" href="#" target="_blank" class="btn btn-sm btn-light collapse" title="Download source code for debugging"><i class="fal fa-bug"></i></a>
+					<div id="customActions">
+						
+					</div>
+				</div>
                 <div class="btn-group">
                     <span class="pt-2 small collapse" title="Editor syntax" id="labelSyntaxLanguage"></span>
                 </div>
