--- a/Development/TomPIT.Development.UI/Views/Ide/Designers/Text.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Ide/Designers/Text.cshtml
@@ -56,6 +56,16 @@
         debug: {
             url: '@url'
         },
+        @if (Model.AmbientProvider != null && Model.AmbientProvider.ToolbarActions.Count > 0) {
+            <text>
+        actions: [
+          @foreach (var action in Model.AmbientProvider.ToolbarActions)
+          {
+                  @:{text: '@action.Text', glyph: '@action.Glyph', action: '@action.Action'},
+              }
+        ],
+        </text>
+            }
         language:'@Model.Language'
     });
 
