--- a/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Console.cshtml
@@ -29,6 +29,9 @@
                     <span class="pt-2 small collapse" title="Editor syntax" id="labelSyntaxLanguage"></span>
                 </div>
             </div>
+			<div id="modelTabs">
+				
+			</div>
             <div data-role="text-editor" class="text-editor text-editor-sa"></div>
         </div>
 		<div id="devDesigner" class="collapse show">
