--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
@@ -529,9 +529,15 @@ li[data-kind="error-item"]:hover {
     color: @Grey800;
 }
 
+#modelTabs{
+    padding:1px 0;
+}
 .model-tab{
-    padding:0 3px;
+    padding:3px;
     cursor:pointer;
+    border-radius:2px;
+    border:1px solid @Grey300;
+    margin:0 1px;
 }
 
 .model-tab.active{
