--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
@@ -552,3 +552,7 @@ li[data-kind="error-item"]:hover {
 .model-tab .close-model:hover {
     display: inline;
 }
+
+span[data-kind="empty"]{
+    padding:0 1px;
+}
