--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/ide.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/ide.less
@@ -549,3 +549,7 @@ li[data-kind="error-item"]:hover {
 .model-tab .close-model:hover {
     display: inline;
 }
+
+span[data-kind="empty"] {
+    padding: 0 1px;
+}
