Copy paste components implemented

--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/development.css
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/development.css
@@ -62,16 +62,15 @@
 }
 .microservice-list-item {
   width: 100%;
-  padding: 10px;
+  padding: 2px;
   background-color: #FFF;
-  border: 1px solid #e0e0e0;
-  margin: 5px 0;
-  border-radius: 4px;
+  border-bottom: 1px dotted #e0e0e0;
+  margin: 2px 0;
   cursor: pointer;
+  font-size: 0.8rem;
 }
 .microservice-list-item:hover {
-  color: #FFF;
-  background-color: #2196f3;
+  color: #03a9f4;
 }
 .kpi {
   padding: 5px;
