--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/development.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/development.less
@@ -84,17 +84,16 @@
 
 .microservice-list-item{
     width:100%;
-    padding:10px;
+    padding:2px;
     background-color:#FFF;
-    border:1px solid @Grey300;
-    margin:5px 0;
-    border-radius:4px;
+    border-bottom:1px dotted @Grey300;
+    margin:2px 0;
     cursor:pointer;
+    font-size:0.8rem;
 }
 
 .microservice-list-item:hover{
-    color:#FFF;
-    background-color:@Blue500;
+    color:@LightBlue500;
 }
 
 .kpi {
