--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/Text.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/Text.cshtml
@@ -24,30 +24,36 @@
         text = JavaScriptEncoder.Default.Encode(Environment.NewLine);
     }
 }
+
 <script>
-    var modelUri = new monaco.Uri({
-        scheme: 'inmemory',
-        authority: '@ms.Name',
-        path:'@uriPath'
-    });
+    initTextEditor(() => {
+        var modelUri = new monaco.Uri({
+            scheme: 'inmemory',
+            authority: '@ms.Name',
+            path:'@uriPath'
+        });
 
-    var model = monaco.editor.getModel(modelUri);
+        var model = monaco.editor.getModel(modelUri);
 
-    if (model == null) {
-        model = monaco.editor.createModel('@text', '@Model.Language', modelUri);
+        if (model == null) {
+            model = monaco.editor.createModel('@text', '@Model.Language', modelUri);
+            model.fileName = '@Model.Element.Title';
+            model.microService = '@Model.Environment.Context.MicroService.Name';
 
-        if (!textEditorState.isLanguageInitialized('@Model.Language')) {
-            textEditorState.initializeLanguage('@Model.Language', {
-                'codeAction': @Html.TP().JavaScript.Bool((features & LanguageFeature.CodeAction) == LanguageFeature.CodeAction),
-                'completionItem': @Html.TP().JavaScript.Bool((features & LanguageFeature.CompletionItem) == LanguageFeature.CompletionItem),
-                'declaration': @Html.TP().JavaScript.Bool((features & LanguageFeature.Declaration) == LanguageFeature.Declaration),
-                'signatureHelp': @Html.TP().JavaScript.Bool((features & LanguageFeature.SignatureHelp) == LanguageFeature.SignatureHelp),
-                'documentSymbol': @Html.TP().JavaScript.Bool((features & LanguageFeature.DocumentSymbol) == LanguageFeature.DocumentSymbol)
-            });
+            textEditorWidget.activateModel(model.id, model.fileName, model.microService);
+
+            if (!textEditorState.isLanguageInitialized('@Model.Language')) {
+                textEditorState.initializeLanguage('@Model.Language', {
+                    'codeAction': @Html.TP().JavaScript.Bool((features & LanguageFeature.CodeAction) == LanguageFeature.CodeAction),
+                    'completionItem': @Html.TP().JavaScript.Bool((features & LanguageFeature.CompletionItem) == LanguageFeature.CompletionItem),
+                    'declaration': @Html.TP().JavaScript.Bool((features & LanguageFeature.Declaration) == LanguageFeature.Declaration),
+                    'definition': @Html.TP().JavaScript.Bool((features & LanguageFeature.Definition) == LanguageFeature.Definition),
+                    'signatureHelp': @Html.TP().JavaScript.Bool((features & LanguageFeature.SignatureHelp) == LanguageFeature.SignatureHelp),
+                    'documentSymbol': @Html.TP().JavaScript.Bool((features & LanguageFeature.DocumentSymbol) == LanguageFeature.DocumentSymbol),
+                    'documentFormatting': @Html.TP().JavaScript.Bool((features & LanguageFeature.DocumentFormatting) == LanguageFeature.DocumentFormatting)
+                });
+            }
         }
-    }
-    else
-        model.setValue('@text');
 
     textEditorState.setTargetProperty('@Model.PropertyName');
 
@@ -182,4 +188,6 @@
     }
     </text>
     }
+    });
+
 </script>
