Ide decorations implemented

--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
@@ -556,3 +556,8 @@ li[data-kind="error-item"]:hover {
 span[data-kind="empty"]{
     padding:0 1px;
 }
+
+.tp-namespace{
+    color: silver !important;
+    font-size:11px;
+}
