--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/Text.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/Text.cshtml
@@ -151,7 +151,7 @@
                         'text': model.getValue(),
                     },
                     onError(e) {
-                        reject();
+                        resolve();
                     },
                     onComplete: function (e) {
                         @if (features.HasFlag(LanguageFeature.DeltaDecorations))
