Multitenant bug fix

--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.css
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.css
@@ -445,6 +445,5 @@ span[data-kind="empty"] {
   padding: 0 1px;
 }
 .tp-namespace {
-  color: silver !important;
-  font-size: 11px;
+  color: #b39ddb !important;
 }
