--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/ide.less
@@ -558,6 +558,5 @@ span[data-kind="empty"]{
 }
 
 .tp-namespace{
-    color: silver !important;
-    font-size:11px;
+    color: @DeepPurple200 !important;
 }
