--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/ide.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/ide.less
@@ -531,10 +531,16 @@ li[data-kind="error-item"]:hover {
     color: @Grey800;
 }
 
+#modelTabs {
+    padding: 1px 0;
+}
 
 .model-tab {
-    padding: 0 3px;
+    padding: 3px;
     cursor: pointer;
+    border-radius: 2px;
+    border: 1px solid @Grey300;
+    margin: 0 1px;
 }
 
 .model-tab.active {
@@ -552,4 +558,8 @@ li[data-kind="error-item"]:hover {
 
 span[data-kind="empty"] {
     padding: 0 1px;
+}
+
+.tp-namespace {
+    color: @DeepPurple200 !important;
 }
