Rest microservice identifier changed

--- a/Development/TomPIT.Development.UI/Views/Ide/Designers/StringTable.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Ide/Designers/StringTable.cshtml
@@ -80,7 +80,7 @@
               {
                 dataField: "key",
                 caption: "Key",
-                sort:'asc',
+                sortOrder:'asc',
                  validationRules: [{ type: "required" }]
             },
               {
