Exception handling improvements

--- a/App/TomPIT.App.UI/wwwroot/Assets/Styles/tompit.css
+++ b/App/TomPIT.App.UI/wwwroot/Assets/Styles/tompit.css
@@ -1064,3 +1064,24 @@ table tbody tr[data-filtered="true"] {
 .form-group .form-data.normal {
   font-weight: normal;
 }
+.tp-error-diagnostics {
+  text-align: left!important;
+}
+.tp-error-diagnostics-title {
+  margin-top: 15px;
+}
+.tp-error-diagnostics-code {
+  background-color: #f5f5f5;
+}
+.tp-error-diagnostics pre {
+  overflow-x: auto;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+  margin: 0;
+}
+.tp-error-line {
+  color: red;
+}
