--- a/App/TomPIT.App.UI/wwwroot/Assets/Styles/tompit.less
+++ b/App/TomPIT.App.UI/wwwroot/Assets/Styles/tompit.less
@@ -1291,3 +1291,29 @@ table tbody tr[data-filtered="true"] {
 .form-group .form-data.normal {
     font-weight: normal;
 }
+
+.tp-error-diagnostics{
+	text-align:left!important;
+}
+
+.tp-error-diagnostics-title {
+	margin-top:15px;
+}
+
+.tp-error-diagnostics-code {
+	background-color:@Grey100;
+}
+
+.tp-error-diagnostics pre {
+	overflow-x: auto;
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
+	white-space: -pre-wrap;
+	white-space: -o-pre-wrap;
+	word-wrap: break-word;
+	margin:0;
+}
+
+.tp-error-line {
+	color:red;
+}
